fix(dependency): 修复运行时依赖下载器的多处缺陷
- 下载循环改用传入的 repos 参数, POM 中声明的仓库不再失效
- 变量替换改用 appendReplacement, 修复含多个变量时的死循环与错误替换
- equals/hashCode 纳入 version, 避免不同版本被静态缓存静默吞并; scope 参数生效并对齐 Maven 默认值
- 下载后按 .sha1 校验完整性; getLatestVersion 关闭外部实体防 XXE; 网络请求增加连接/读取超时
- <dependencies> 只取直接子节点, 不再误抓 dependencyManagement; ClassAppender 在新 JDK 无 Unsafe 时给出明确异常